<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/list_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_sort"
        android:checkable="true"
        android:icon="@drawable/baseline_sort_white_48dp"
        android:title="@string/list_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/sort_options"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_title"
                    android:title="@string/list_sort_title" />
                <item
                    android:id="@+id/sort_publish_time"
                    android:title="@string/list_sort_publish_time" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/clear"
        android:title="@string/list_clear" />

</menu>